chore: update pom.xml - add "EnableDynamicAgentLoading" option to maven-surefire-plugin