@@ -119,7 +119,6 @@
             <scope>runtime</scope>
         </dependency>
 
-
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
@@ -199,6 +198,7 @@
                 <version>3.5.4</version>
                 <configuration>
                     <excludes>**/*IT.java</excludes>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
             </plugin>
             <plugin>
